--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -10,3 +10,29 @@ target 'iosApp' do
   pod 'GoogleMLKit/Translate'
 
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      # Exclude x86_64 architecture to only support ARM
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'x86_64'
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphoneos*]'] = 'x86_64'
+      # Override any conflicting xcconfig settings
+      config.build_settings.delete 'EXCLUDED_ARCHS'
+    end
+  end
+  
+  # Strip x86_64 architecture from pre-built frameworks
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      if config.build_settings['PRODUCT_TYPE'] == 'com.apple.product-type.framework'
+        framework_name = target.name
+        framework_path = "Pods/#{framework_name}/Frameworks/#{framework_name}.framework/#{framework_name}"
+        if File.exist?(framework_path)
+          puts "Stripping x86_64 from #{framework_name}"
+          system("lipo -remove x86_64 '#{framework_path}' -output '#{framework_path}'")
+        end
+      end
+    end
+  end
+end
